Parte intermedia - mejorando

--- a/semana1/mundial.html
+++ b/semana1/mundial.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+git <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -16,32 +16,43 @@
           <h3>  Grupo A </h3>
           <ul>
             <li>
+             <a href="https://www.fifa.com/es/about-fifa/associations/RUS" target="_blank">
               <img
-                src="https://flagicons.lipis.dev/flags/4x3/ru.svg"
-                width="20px"
-              />
-              Rusia
+              src="https://flagicons.lipis.dev/flags/4x3/ru.svg"
+              width="20px"
+            />
+            Rusia
+             </a> 
             </li>
             <li>
+              <a href="https://www.fifa.com/es/about-fifa/associations/KSA" target="_blank">
               <img
                 src="https://flagicons.lipis.dev/flags/4x3/sa.svg"
                 width="20px"
               />
               Arabia S.
+            </a>
             </li>
             <li>
+              
+            <a href="https://www.fifa.com/es/about-fifa/associations/EGY" target="_blank">
               <img
                 src="https://flagicons.lipis.dev/flags/4x3/eg.svg"
                 width="20px"
               />
               Egypto
+            </a>
             </li>
             <li>
+              
+              <a href="https://www.auf.org.uy/" target="_blank">
               <img
                 src="https://flagicons.lipis.dev/flags/4x3/uy.svg"
                 width="20px"
               />
               Uruguay
+
+            </a>
             </li>
           </ul>
         </td>
@@ -49,32 +60,37 @@
           <h3>Grupo B</h3>
           <ul>
             <li>
-              <img
-                src="https://flagicons.lipis.dev/flags/4x3/ru.svg"
+              <a href="https://www.fpf.pt/pt/" target="_blank"><img
+                src="https://flagicons.lipis.dev/flags/4x3/pt.svg"
                 width="20px"
               />
-              Rusia
+              Portugal
+            </a>
             </li>
             <li>
+              <a href="https://www.rfef.es/" target="_blank">
               <img
-                src="https://flagicons.lipis.dev/flags/4x3/sa.svg"
+                src="https://flagicons.lipis.dev/flags/4x3/ea.svg"
                 width="20px"
               />
-              Arabia S.
+              España
+            </a>
             </li>
             <li>
-              <img
-                src="https://flagicons.lipis.dev/flags/4x3/eg.svg"
+             <a href="https://www.fifa.com/es/about-fifa/associations/MAR" target="_blank"> <img
+                src="https://flagicons.lipis.dev/flags/4x3/ma.svg"
                 width="20px"
               />
-              Egypto
+              Marruecos
+            </a>
             </li>
             <li>
-              <img
-                src="https://flagicons.lipis.dev/flags/4x3/uy.svg"
+             <a href="https://www.fifa.com/es/about-fifa/associations/IRN" target="_blank"> <img
+                src="https://flagicons.lipis.dev/flags/4x3/ir.svg"
                 width="20px"
               />
-              Uruguay
+              Iran
+            </a>
             </li>
           </ul>
         </td>
