subiendo 3 avanzan de 3era semana

--- a/semana1/hiperviculos.html
+++ b/semana1/hiperviculos.html
@@ -33,5 +33,11 @@
         
             </video>
         </div>
+
+        <div>
+            <button onclick="console.log ('Hola desde el boton')">
+                Mostrar todo el poder
+            </button>
+        </div>
   </body>
 </html>
