--- a/semana1/index.html
+++ b/semana1/index.html
@@ -50,6 +50,17 @@
 
 
 <a href="prueba.html">volver</a>
+
+<div>
+  <h1><a href="./hiperviculos.html" target="_blank">aqui hipervinculo</a>
+  </h1>
+  </div>
+
+  <div>
+    <h1><a href="./mundial.html" target="_blank">aqui hipervinculo</a>
+    </h1>
+    </div>
+
     </body>
   </head>
 </html>
