avance de tablas

--- a/semana1/index.html
+++ b/semana1/index.html
@@ -32,7 +32,6 @@
     </ul>
 
 
-
 </P>
 <div style="text-align:center">
     
@@ -55,7 +54,7 @@
   <h1><a href="./hiperviculos.html" target="_blank">aqui hipervinculo</a>
   </h1>
   </div>
-
+git
   <div>
     <h1><a href="./mundial.html" target="_blank">aqui hipervinculo</a>
     </h1>
