--- a/semana1/mundial.html
+++ b/semana1/mundial.html
@@ -6,7 +6,7 @@ git <!DOCTYPE html>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rusia 2018</title>
   </head>
-  <body style="text-align: center">
+  <body>
     <h1>Mundial de Rusia 2018</h1>
     <h2>Fase de Grupos</h2>
     <table>
