--- a/Semana2/fuentes.html
+++ b/Semana2/fuentes.html
@@ -5,12 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fuentes</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link href="https://fonts.googleapis.com/css2?family=Kdam+Thmor+Pro&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="./css/index.css" />
   </head>
   <body>
     <div>
       <h1>Semana2/Fuentes</h1>
-      <p class="parrafo">Hola mi nombre David Tipe Palomino => === =/= ==</p>
+      <p class="parrafo">Hola mi nombre David Tipe Palomino </p>
       <a
         class="link"
         href="https://www.youtube.com/watch?v=pvmGJ7c5zCs&ab_channel=CodingTube"
@@ -28,5 +36,10 @@
         <li><span class="span-6"> Manchester United</span></li>
       </ul>
     </div>
-  </body>
+ <div>
+     <h2 class="titulo2">Fuentes desde archivo</h2>
+     <p class="parrafo2">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Blanditiis veritatis incidunt laudantium distinctio aperiam alias voluptas veniam necessitatibus doloremque perspiciatis. Pariatur doloremque sit voluptate sed iusto adipisci, numquam sapiente sunt?</p>
+ 
+    </div> 
+</body>
 </html>
