--- a/semana1/mundia_table.html
+++ b/semana1/mundia_table.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="estilos.css">
+
     <title>Document</title>
 </head>
 
@@ -45,7 +47,7 @@
 
             </td>
             <td>Rusia</td>
-            <td>9</td>
+            <td>6</td>
         </tr>
         <tr>
             <td><img
@@ -53,7 +55,7 @@
                 width="20px"
               /></td>
             <td>Arabia Saudita</td>
-            <td>9</td>
+            <td>3</td>
         </tr>
         <tr>
             <td><img
@@ -61,7 +63,7 @@
                 width="20px"
               /></td>
             <td>Egipto</td>
-            <td>9</td>
+            <td>0</td>
         </tr>
         </table>
 </td>
@@ -79,7 +81,7 @@
                 width="20px"
               /></td>
             <td>España</td>
-            <td>9</td>
+            <td>5</td>
         </tr>
         <tr>
             <td><img
@@ -87,7 +89,7 @@
                 width="20px"
               /></td>
             <td>Portugal</td>
-            <td>9</td>
+            <td>5</td>
         </tr>
         <tr>
             <td><img
@@ -95,7 +97,7 @@
                 width="20px"
               /></td>
             <td>Irán</td>
-            <td>9</td>
+            <td>4</td>
         </tr>
         <tr>
             <td><img
@@ -103,7 +105,7 @@
                 width="20px"
               /></td>
             <td>Marruecos</td>
-            <td>9</td>
+            <td>1</td>
         </tr>
         </table>
         </td>
@@ -118,22 +120,22 @@
         <tr>
             <td><img src="https://flagicons.lipis.dev/flags/4x3/fr.svg" alt="" width="20px"></td>
             <td>Francia</td>
-            <td>9</td>
+            <td>7</td>
         </tr>
         <tr>
             <td> <img src="https://flagicons.lipis.dev/flags/4x3/dk.svg" width="20px" alt=""> </td>
             <td>Dinamarca</td>
-            <td>9</td>
+            <td>5</td>
         </tr>
         <tr>
             <td><img src="https://flagicons.lipis.dev/flags/4x3/au.svg" width="20px" alt=""></td>
             <td>Australia</td>
-            <td>9</td>
+            <td>3</td>
         </tr>
         <tr>
             <td> <img src="https://flagicons.lipis.dev/flags/4x3/pe.svg" width="20px" alt=""></td>
             <td>Perú</td>
-            <td>9</td>
+            <td>1</td>
         </tr>
         </table>
 </td>
@@ -153,17 +155,17 @@
         <tr>
             <td><img src="https://flagicons.lipis.dev/flags/4x3/ar.svg" width="20px" alt=""></td>
             <td>Argentina</td>
-            <td>9</td>
+            <td>4</td>
         </tr>
         <tr>
             <td><img src="https://flagicons.lipis.dev/flags/4x3/ng.svg" width="20px" alt=""></td>
             <td>Nigeria</td>
-            <td>9</td>
+            <td>3</td>
         </tr>
         <tr>
             <td><img src="https://flagicons.lipis.dev/flags/4x3/is.svg" width="20px" alt=""></td>
             <td>Islandia</td>
-            <td>9</td>
+            <td>1</td>
         </tr>
         </table>
         </td>
@@ -179,24 +181,29 @@
             <th>Puntos</th>
         </tr>
         <tr>
-            <td></td>
-            <td>Uruguay</td>
-            <td>9</td>
+            <td><img src="https://flagicons.lipis.dev/flags/4x3/br.svg" width="20px" alt=""></td>
+            <td>Brazil</td>
+            <td>7</td>
         </tr>
         <tr>
-            <td></td>
-            <td>Rusia</td>
-            <td>9</td>
+            <td><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAASIAAACuCAMAAAClZfCTAAAANlBMVEX+AAD////+zMr/3t7+IiL/NDP/9fT+Cgv8AAD8//7+Hx//5+f8Kiv709P+y8v9yMP9xsb8NjXitnFJAAABXklEQVR4nO3dW05CMRRAUS4qiA/E+U9WB2CyTwx
+                JQdf6bnp7d/p5ku52AAAAAAAAAADAIo/lZfUJl9vK6+oTLpeJHlafcDmJkkRJoiRRkihJlCRKEiWJkkRJoiRRkihJlCRKEiWJkkRJoiRRk
+                ihJlCRKEiWJkkRJoiRRkihJlCRKEiWJkkTpfyd6niw6ZaLRNsOv3Za39/M+nT/yFh0ug332l+MdJvrc8oJs30t60Wmwz3Y4rv7fXxglmh
+                htc5eJnq4TaEgiiSSS6GcSJYmSREmiJFGSKEmUJEoSJYmSREmiJFGSKEmUJEoSJYmSREmiJFGSKEmUJErGHpLhmWQEa8Ag33XkLfrT46Aj
+                EiWJkkRJoiRRkihJlCRKEiWJkkRJoiRRkihJlCRKEiWJkkRJoiRRkihJlCRKEiWJkkRJoiRRkihJlCRKEiWJkkQpE3nm22PxAAAAAAAAAABw
+                q74A6y4fAbA40k4AAAAASUVORK5CYII=" width="20px" alt=""></td>
+            <td>Suiza</td>
+            <td>5</td>
         </tr>
         <tr>
-            <td></td>
-            <td>Arabia Saudita</td>
-            <td>9</td>
+            <td><img src="https://flagicons.lipis.dev/flags/4x3/rs.svg" width="20px" alt=""></td>
+            <td>Serbia</td>
+            <td>3</td>
         </tr>
         <tr>
-            <td></td>
-            <td>Egipto</td>
-            <td>9</td>
+            <td><img src="https://flagicons.lipis.dev/flags/4x3/cr.svg" width="20px" alt=""></td>
+            <td>Costa Rica</td>
+            <td>1</td>
         </tr>
         </table>
 
@@ -210,24 +217,24 @@
             <th>Puntos</th>
         </tr>
         <tr>
-            <td></td>
-            <td>Uruguay</td>
-            <td>9</td>
+            <td><img src="https://flagicons.lipis.dev/flags/4x3/se.svg" width="20px" alt=""></td>
+            <td>Suecia</td>
+            <td>6</td>
         </tr>
         <tr>
-            <td></td>
-            <td>Rusia</td>
-            <td>9</td>
+            <td><img src="https://flagicons.lipis.dev/flags/4x3/mx.svg" width="20px" alt=""></td>
+            <td>Mexico</td>
+            <td>6</td>
         </tr>
         <tr>
-            <td></td>
-            <td>Arabia Saudita</td>
-            <td>9</td>
+            <td><img src="https://flagicons.lipis.dev/flags/4x3/kr.svg" width="20px" alt=""></td>
+            <td>Corea del Sur</td>
+            <td>3</td>
         </tr>
         <tr>
-            <td></td>
-            <td>Egipto</td>
-            <td>9</td>
+            <td><img src="https://flagicons.lipis.dev/flags/4x3/de.svg"  width="20px" alt=""></td>
+            <td>Alemania</td>
+            <td>3</td>
         </tr>
         </table>
     </td>
@@ -240,24 +247,24 @@
             <th>Puntos</th>
         </tr>
         <tr>
-            <td></td>
-            <td>Uruguay</td>
+            <td><img src="https://flagicons.lipis.dev/flags/4x3/be.svg" width="20px" alt=""></td>
+            <td>Belgica</td>
             <td>9</td>
         </tr>
         <tr>
-            <td></td>
-            <td>Rusia</td>
-            <td>9</td>
+            <td><img src="https://flagicons.lipis.dev/flags/4x3/gb-eng.svg" width="20px" alt=""></td>
+            <td>Inglaterra</td>
+            <td>6</td>
         </tr>
         <tr>
-            <td></td>
-            <td>Arabia Saudita</td>
-            <td>9</td>
+            <td><img src="https://flagicons.lipis.dev/flags/4x3/tn.svg" width="20px" alt=""></td>
+            <td>Tunez</td>
+            <td>3</td>
         </tr>
         <tr>
-            <td></td>
-            <td>Egipto</td>
-            <td>9</td>
+            <td><img src="https://flagicons.lipis.dev/flags/4x3/pa.svg" width="20px" alt=""></td>
+            <td>Panamá</td>
+            <td>0</td>
         </tr>
         </table>
     </td>
@@ -270,24 +277,24 @@
             <th>Puntos</th>
         </tr>
         <tr>
-            <td></td>
-            <td>Uruguay</td>
-            <td>9</td>
+            <td><img src="https://flagicons.lipis.dev/flags/4x3/co.svg" width="20px" alt=""></td>
+            <td>Colombia</td>
+            <td>6</td>
         </tr>
         <tr>
-            <td></td>
-            <td>Rusia</td>
-            <td>9</td>
+            <td><img src="https://flagicons.lipis.dev/flags/4x3/jp.svg" width="20px" alt=""></td>
+            <td>Japón</td>
+            <td>4</td>
         </tr>
         <tr>
-            <td></td>
-            <td>Arabia Saudita</td>
-            <td>9</td>
+            <td> <img src="https://flagicons.lipis.dev/flags/4x3/sn.svg" width="20px" alt=""></td>
+            <td>Senegal</td>
+            <td>4</td>
         </tr>
         <tr>
-            <td></td>
-            <td>Egipto</td>
-            <td>9</td>
+            <td><img src="https://flagicons.lipis.dev/flags/4x3/pl.svg" width="20px" alt=""></td>
+            <td>Polonia</td>
+            <td>3</td>
         </tr>
         </table>
     </td>
