--- a/semana3/eq.html
+++ b/semana3/eq.html
@@ -18,12 +18,12 @@
     </div> 
     <div class="inter"></div>
     <div class="barra2">
-        <div ><input
+        <div class="input" ><input
             class="buscar"
             type="text"
             placeholder="Buscar usuario"
           /></div>
-        <div class="boton"><input class="boton" type="submit" value="Search" /></div>
+        <div><input class="boton" type="submit" value="Search" /></div>
     </div> 
     <div class="inter2">
 
