--- a/semana3/menu.html
+++ b/semana3/menu.html
@@ -9,22 +9,24 @@
   </head>
   <body>
     <header>
-      <h1 id="title">MUNDIAL</h1>
-      <nav class="nav1">
+      <h1>MUNDIAL</h1>
+      <nav>
         <ul>
           <li><a href=""> Inicio</a></li>
           <li>
-            <div class="drodown">
-              <!-- ancla -->
-              <a href="" class="dropdown-button">Equipos</a>
-              <!-- menu -->
-              <ul class="dropdown-content">
-                <li>op 1</li>
-                <li>op 2</li>
+            <div class="dropdown">
+              <a href="#" class="dropdown-button">Equipos</a>
+               <ul class="dropdown-content">
+                <li><a href="">op 1</a></li>
+                <li><a href="">op 2</a></li>
               </ul>
             </div>
-          </li>
-          <li><a href="">Partidos</a></li>
+           </li>
+          <li><a href="#">Partidos</a></li>
+          <li><a href="#">Mejores Jugadas</a></li>
+          <li><a href="#">Equipo Soñado</a></li>
+          <li><a href="#">Goleadores</a></li>
+          <li><a href="#">Numero de pases de equipo</a></li>
         </ul>
       </nav>
     </header>
