--- a/semana3/index.html
+++ b/semana3/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/index.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/index.css" />
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -12,45 +12,79 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"
       rel="stylesheet"
     />
-</head>
-<body>
+  </head>
+  <body>
     <div>
-        <h4 class="title">This Weeks Highlights</h4>
-        <hr />
-        <div class="container">
-          <div class="small-child child-one">
-            <h2>Exclusive Shoes</h2>
-            <section>
-              <h5>Exclusive Shoes</h5>
-              <p>PRICE 20% OFF</p>
-              <h5>DISCOUNT CODE - VATR3920</h5>
-            </section>
-          </div>
-          <div class="big-child child-two">
-            <h2>Exquisite Styles & Collections</h2>
-            <section>
-              <h5>Exquisite Styles & Collections</h5>
-              <p>PRICE 20% OFF</p>
-              <h5>DISCOUNT CODE - VATR3920</h5>
-            </section>
-          </div>
-          <div class="big-child child-three">
-            <h2>New Arrivals</h2>
-            <section>
-              <h5>New Arrivals</h5>
-              <p>PRICE 20% OFF</p>
-              <h5>DISCOUNT CODE - VATR3920</h5>
-            </section>
-          </div>
-          <div class="small-child child-four">
-            <h2>Exclusive Items</h2>
-            <section>
-              <h5>Exclusive Items</h5>
-              <p>PRICE 20% OFF</p>
-              <h5>DISCOUNT CODE - VATR3920</h5>
-            </section>
-          </div>
+      <h4 class="title">This Weeks Highlights</h4>
+      <hr />
+      <div class="container">
+        <div class="small-child child-one">
+          <h2>Exclusive Shoes</h2>
+          <section>
+            <h5>Exclusive Shoes</h5>
+            <p>PRICE 20% OFF</p>
+            <h5>DISCOUNT CODE - VATR3920</h5>
+          </section>
+        </div>
+        <div class="big-child child-two">
+          <h2>Exquisite Styles & Collections</h2>
+          <section>
+            <h5>Exquisite Styles & Collections</h5>
+            <p>PRICE 20% OFF</p>
+            <h5>DISCOUNT CODE - VATR3920</h5>
+          </section>
+        </div>
+        <div class="big-child child-three">
+          <h2>New Arrivals</h2>
+          <section>
+            <h5>New Arrivals</h5>
+            <p>PRICE 20% OFF</p>
+            <h5>DISCOUNT CODE - VATR3920</h5>
+          </section>
+        </div>
+        <div class="small-child child-four">
+          <h2>Exclusive Items</h2>
+          <section>
+            <h5>Exclusive Items</h5>
+            <p>PRICE 20% OFF</p>
+            <h5>DISCOUNT CODE - VATR3920</h5>
+          </section>
         </div>
       </div>
-</body>
+    </div>
+    <div>
+      <h4 class="title2">Popular this week</h4>
+      <hr class="hr2" />
+      <div class="container2">
+        <div class="imagen1 i1">
+          <section class="sec">
+            <p>Striped Flutter Sleeve Overlap Collar Peplum Hem Blouse</p>
+            <h5>$120.23 $120.23</h5>
+            <h5>+ Add to Basket</h5>
+          </section>
+        </div>
+        <div class="imagen2 i2">
+          <section class="sec">
+            <p>Striped Flutter Sleeve Overlap Collar Peplum Hem Blouse</p>
+            <h5>$90.00 $100.00</h5>
+            <h5>+ Add to Basket</h5>
+          </section>
+        </div>
+        <div class="iamgen3 i3">
+          <section class="sec">
+            <p>Striped Flutter Sleeve Overlap Collar Peplum Hem Blouse</p>
+            <h5>$140.24 $150.11</h5>
+            <h5>+ Add to Basket</h5>
+          </section>
+        </div>
+        <div class="imagen4 i4">
+          <section class="sec">
+            <p>Striped Flutter Sleeve Overlap Collar Peplum Hem Blouse</p>
+            <h5>$105.23 $120.23</h5>
+            <h5>+ Add to Basket</h5>
+          </section>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
