--- a/semana3/index.html
+++ b/semana3/index.html
@@ -52,7 +52,58 @@
         </div>
       </div>
     </div>
+
     <div>
+      <h4 class="title">This Weeks Highlights</h4>
+      <hr />
+      <div class="popular-container">
+        <div>
+          <img src="./images/casanegra.svg" alt="" />
+          <p class="description">
+            Striped Flutter Sleeve Overlap Collar Peplum Hem Blouse
+          </p>
+          <section class="price">
+            <p>$120.23</p>
+            <p class="line">$100.00</p>
+            <a href="">+ Add to Basket</a>
+          </section>
+        </div>
+        <div>
+          <img src="./images/polo-rojo.svg" alt="" />
+          <p class="description">
+            Striped Flutter Sleeve Overlap Collar Peplum Hem Blouse
+          </p>
+          <section class="price">
+            <p>$120.23</p>
+            <p class="line">$100.00</p>
+            <a href="">+ Add to Basket</a>
+          </section>
+        </div>
+        <div>
+          <img src="./images/gorra-negra.svg" alt="" />
+          <p class="description">
+            Striped Flutter Sleeve Overlap Collar Peplum Hem Blouse
+          </p>
+          <section class="price">
+            <p>$120.23</p>
+            <p class="line">$100.00</p>
+            <a href="">+ Add to Basket</a>
+          </section>
+        </div>
+        <div>
+          <img src="./images/polo-bicolor.svg" alt="" />
+          <p class="description">
+            Striped Flutter Sleeve Overlap Collar Peplum Hem Blouse
+          </p>
+          <section class="price">
+            <p>$120.23</p>
+            <p class="line">$100.00</p>
+            <a href="">+ Add to Basket</a>
+          </section>
+        </div>
+      </div>
+    </div>
+    <!-- <div>
       <h4 class="title2">Popular this week</h4>
       <hr class="hr2" />
       <div class="container2">
@@ -85,6 +136,6 @@
           </section>
         </div>
       </div>
-    </div>
+    </div> -->
   </body>
 </html>
