--- a/semana3/menu.html
+++ b/semana3/menu.html
@@ -16,17 +16,44 @@
           <li>
             <div class="dropdown">
               <a href="#" class="dropdown-button">Equipos</a>
-               <ul class="dropdown-content">
-                <li><a href="">op 1</a></li>
-                <li><a href="">op 2</a></li>
+              <ul class="dropdown-content">
+                <li><a href="">Todos los grupos</a>
+                </li>
+                <li><a href="grupos/grupos.html">Grupo A</a></li>
+                <li><a href="">Grupo B</a></li>
+                <li><a href="">Grupo C</a></li>
+                <li><a href="">Grupo D</a></li>
+                <li><a href="">Grupo E</a></li>
+                <li><a href="">Grupo F</a></li>
+                <li><a href="">Grupo G</a></li>
+                <li><a href="">Grupo H</a></li>
               </ul>
             </div>
-           </li>
-          <li><a href="#">Partidos</a></li>
-          <li><a href="#">Mejores Jugadas</a></li>
-          <li><a href="#">Equipo Soñado</a></li>
-          <li><a href="#">Goleadores</a></li>
-          <li><a href="#">Numero de pases de equipo</a></li>
+          </li>
+          <li>
+            <div class="dropdown">
+              <a href="#" class="dropdown-button">Partidos</a>
+              <ul class="dropdown-content">
+                <li><a href="#">Todos</a></li>
+                <li><a href="#">Fase grupos</a></li>
+                <li><a href="#">8vos</a></li>
+                <li><a href="#">4tos</a></li>
+                <li><a href="#">Semis</a></li>
+                <li><a href="#">Final</a></li>
+              </ul>
+            </div>
+          </li>
+          <li>
+            <div class="dropdown">
+              <a href="">Extras</a>
+              <ul class="dropdown-content">
+                <li><a href="#">Mejores Jugadas</a></li>
+                <li><a href="#">Equipo Soñado</a></li>
+                <li><a href="#">Goleadores</a></li>
+                <li><a href="#">Numero de pases de equipo</a></li>
+              </ul>
+            </div>
+          </li>
         </ul>
       </nav>
     </header>
