--- a/PRUEBASMEDIDA/PRUEBA.html
+++ b/PRUEBASMEDIDA/PRUEBA.html
@@ -11,7 +11,9 @@
   
   <!-- <div class="div1-box"></div> -->
   <div class="Padre">
+    <h1>HOLA</h1>
     <div class="hijo"></div>
+    
   </div>
 <!--   
   <div class="bandera">
