--- a/semana3/flex.html
+++ b/semana3/flex.html
@@ -11,7 +11,8 @@
     <div class="container">
       <div class="div1">
         <h2>1</h2>
-      </div>
+        </div>
+      <!-- </div>
       <div>
         <h2>2</h2>
       </div>
@@ -34,6 +35,6 @@
         <div><h2>1</h2></div>
         <div><h2>2</h2></div>
         <div><h2>3</h2></div>
-    </div>
+    </div> -->
   </body>
 </html>
