--- a/semana3/menu.html
+++ b/semana3/menu.html
@@ -17,8 +17,7 @@
             <div class="dropdown">
               <a href="#" class="dropdown-button">Equipos</a>
               <ul class="dropdown-content">
-                <li><a href="">Todos los grupos</a>
-                </li>
+                <li><a href="">Todos los grupos</a></li>
                 <li><a href="grupos/grupos.html">Grupo A</a></li>
                 <li><a href="">Grupo B</a></li>
                 <li><a href="">Grupo C</a></li>
