reto completo por mejorar

--- a/semana4/reto1.html
+++ b/semana4/reto1.html
@@ -55,13 +55,13 @@
     }
 
     if (Sexo == "M" && edad <= 35) {
-        document.write("<p> El joven"  + Nombre + "Tiene" + edad+ "" + +"<p>");
+        document.write("<p> El joven"  + Nombre + "Tiene" + edad+ "y su nota es" + nota +"<p>");
     } else if (Sexo == "M" && edad <= 35) {
-        document.write("<p>" + Nombre + "Es Sr.<p>");
+        document.write("<p> El Sr."  + Nombre + "Tiene" + edad+ "y su nota es" + nota +"<p>");
     } else if (Sexo == "F" && edad <= 50) {
-        document.write("<p>" + Nombre + "Es jovencita <p>");
+        document.write("<p> La jovencita "  + Nombre + "Tiene" + edad+ "y su nota es" + nota +"<p>");
     } else if (Sexo == "F" && edad > 50) {
-        document.write("<p>" + Nombre + "Es Señora <p>");
+        document.write("<p> La señora"  + Nombre + "Tiene" + edad+ "y su nota es" + nota +"<p>");
     }
 
 
