--- a/semana4/dia6.html
+++ b/semana4/dia6.html
@@ -5,13 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-</head>
-<body>
-    
-</body> 
-<script type="text/javascript" >
 
-sexo
+
+</head>
+<style>
+#container {
+    width: 400px;
+    min-height: 300px;
+    background-color: bisque;
+    margin: auto;
+    border: solid 5px rebeccapurple;   
+}
+
+</style>
+<body>
+    <div id="container"></div>
+</body>
+
+
+<script src="./js/dia6.js">
 
 </script>
 </html>
