--- a/semana4/grupos.html
+++ b/semana4/grupos.html
@@ -75,38 +75,38 @@
             <div class="row tr">
               <div class="td">img uruguay</div>
               <div class="td">uruguay</div>
-              <div class="td">3</div>
-              <div class="td">0</div>
-              <div class="td">0</div>
-              <div class="pju"></div>
-              <div class="pu"></div>
+              <div class="pg">3</div>
+              <div class="pp">0</div>
+              <div class="pe">0</div>
+              <div class="pj"></div>
+              <div class="puntos1"></div>
             </div>
             <div class="row tr">
                 <div class="td">img Rusia</div>
                 <div class="td">Rusia</div>
-                <div class="td">2</div>
-              <div class="td">1</div>
-              <div class="td">0</div>
-              <div class="pjr"></div>
-              <div class="pr"></div>
+                <div class="pg">2</div>
+              <div class="pp">1</div>
+              <div class="pe">0</div>
+              <div class="pj"></div>
+              <div class="puntos2"></div>
               </div>
               <div class="row tr">
                 <div class="td">img Arabia</div>
                 <div class="td">Arabia Saudita</div>
-                <div class="td">1</div>
-              <div class="td">2</div>
-              <div class="td">0</div>
-              <div class="pja"></div>
-              <div class="pa"></div>
+                <div class="pg">1</div>
+              <div class="pp">2</div>
+              <div class="pe">0</div>
+              <div class="pj"></div>
+              <div class="puntos3"></div>
               </div>
               <div class="row tr">
                 <div class="td">img Egipto</div>
                 <div class="td">Egipto</div>
-                <div class="td">0</div>
-              <div class="td">3</div>
-              <div class="td">0</div>
-              <div class="pje"></div>
-              <div class="pe"></div>
+                <div class="pg">0</div>
+              <div class="pp">3</div>
+              <div class="pe">0</div>
+              <div class="pj"></div>
+              <div class="pts4"></div>
               </div>
               </div>
           </div>
@@ -115,8 +115,28 @@
     </div>
   </body>
 
-  <script type="text/javascript">
+  
+<script type="text/javascript">
 
 
-  </script>
+let pg = [3, 2, 1, 0];
+let pp = [0, 1, 2, 3];
+let pe = [0, 0, 0, 0];
+let pj = "";
+
+let puntos11 = Number(" ");
+let puntos2 = Number(" ");
+let puntos3 = Number(" ");
+let puntos4 = Number(" ");
+
+// puntos11 = ;
+pts4.innerHTML+= "<p>" + pg[0] + pp[0] + pe[0] +"</p>";
+puntos2 = pg[1] + pp[1] + pe[1];
+document.write(puntos2);
+puntos3 = pg[2] + pp[2] + pe[2];
+document.write(puntos3);
+puntos4 = pg[3] + pp[3] + pe[3];
+document.write(puntos4);
+</script>
+
 </html>
