--- a/semana4/index.html
+++ b/semana4/index.html
@@ -18,5 +18,5 @@
  <!-- <script type="text/javascript">
      alert ('hola')
  </script> -->
- <script src="../semana4/js/operaciones.js"></script>
+ <!-- <script src="../semana4/js/operaciones.js"></script> -->
 </html>
