--- a/semana6/pitrainer/pi.html
+++ b/semana6/pitrainer/pi.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pi trainer</title>
-    <link rel="stylesheet" href="pi.css">
-</head>
-<body>
+    <link rel="stylesheet" href="pi.css" />
+  </head>
+  <body>
     <div class="container-modal">
       <div class="lost-container">
         <h2>Perdiste</h2>
@@ -46,10 +46,26 @@
           <h3 id="h3_attempts">Intentos:&nbsp;<span></span></h3>
           <h3 id="h3_success_attempts">Correctos:&nbsp;<span></span></h3>
           <h3 id="h3_failed_attempts">Fallidos:&nbsp;<span></span></h3>
-          <h3 id="h3_score">Score:&nbsp;<span></span></h3>
+          <h3 class="h3_score" id="h3_score">Score:&nbsp;<span></span></h3>
         </div>
+        <div class="section">
+          <input
+            type="text"
+            id="input-search"
+            placeholder="Buscar por nombre o marca"
+          />
+          <button id="btn-search">Buscar</button>
+          <button id="btn_limpiar1">Limpiar</button>  
+        </div>
+        <div id="history">
+          <h2>History</h2>
+          <div id="history_container"></div>
+          <input type="button" value="Clear" id="clear" disabled />
+        </div>
+        
       </div>
     </div>
   </body>
-<script src="pi.js"></script>
+  <script src="./user.js"></script>
+  <script src="pi.js"></script>
 </html>
