--- a/semana7/tasklist/index.html
+++ b/semana7/tasklist/index.html
@@ -19,31 +19,174 @@
     }
     .delete {
       text-decoration: line-through;
+      text-transform: uppercase !important;
     }
   </style>
-  <body>
-    <div class="container">
-      <main>
-        <h1>Task List</h1>
-        <section>
-          <input
-            type="text"
-            id="input-task"
-            autocomplete="off"
-            placeholder="Ingresa el nombre de la tarea"
+   <body>
+    <nav class="navbar navbar-expand-lg bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+          <img
+            src="https://getbootstrap.com/docs/5.2/assets/brand/bootstrap-logo.svg"
+            alt=""
+            width="30"
+            height="24"
           />
-          <input type="button" id="btn-task" value="crear" />
-        </section>
+        </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Link</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                id="navbarDropdown"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                Filtros
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li>
+                  <a class="dropdown-item" href="?filter=todo">TODO</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="?filter=delete">DELETE</a>
+                </li>
+                <li><hr class="dropdown-divider" /></li>
+                <li>
+                  <a class="dropdown-item" href="?filter=done">DONE</a>
+                </li>
+              </ul>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link disabled">Disabled</a>
+            </li>
+          </ul>
+          <form class="d-flex" role="search">
+            <input
+              class="form-control me-2"
+              type="search"
+              placeholder="Search"
+              aria-label="Search"
+            />
+            <button class="btn btn-outline-success" type="submit">
+              Search
+            </button>
+          </form>
+        </div>
+      </div>
+    </nav>
+    <main>
+      <div class="container mt-5">
+        <h1>Task List</h1>
+        <form id="form-task" class="row my-3 needs-validation" novalidate>
+          <div class="col-6 col-sm-8 col-md-9 col-lg-10">
+            <input
+              type="text"
+              id="input-task"
+              autocomplete="off"
+              placeholder="Ingresa el nombre de la tarea"
+              required
+              class="form-control"
+            />
+            <div class="invalid-feedback">Escriba una tarea</div>
+          </div>
+          <div class="col-6 col-sm-4 col-md-3 col-lg-2">
+            <button class="btn btn-outline-primary" type="submit">Crear</button>
+          </div>
+        </form>
         <section id="section-task"></section>
-      </main>
+        <!-- vamos a poner el detalle de la tarea -->
+        <section
+          id="section-detail-task"
+          class="row d-flex justify-content-center"
+        ></section>
+      </div>
+    </main>
+    <!-- section del modal -->
+    <!-- <button
+      type="button"
+      class="btn btn-primary"
+      data-bs-toggle="modal"
+      data-bs-target="#exampleModal"
+    >
+      Launch demo modal
+    </button> -->
+    <div
+      class="modal fade"
+      id="exampleModal"
+      tabindex="-1"
+      aria-labelledby="exampleModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Filtro de tareas</h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">
+            <!-- tabla -->
+            <div class="table-responsive">
+              <table class="table table-hover table-bordered">
+                <thead>
+                  <tr>
+                    <th>Id</th>
+                    <th>Nombre</th>
+                    <th>Estado</th>
+                    <th>Fecha</th>
+                  </tr>
+                </thead>
+                <tbody id="tbody"></tbody>
+              </table>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Close
+            </button>
+            <button type="button" class="btn btn-primary">Save changes</button>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
-
-  <!-- ! Nota, recuerden que jquery debe estar antes, para que nuestro index.js  -->
-
+  
   <script src="./jquery.js"></script>
   <!-- esto tambien se puede utilizar -->
   <!-- <script src="https://code.jquery.com/jquery-3.6.0.js"> </script> -->
   <script src="./task.js"></script>
   <script src="./index.js"></script>
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+    crossorigin="anonymous"
+  ></script>
 </html>
